--- a/TV Shows/Modules/Home/Home.storyboard
+++ b/TV Shows/Modules/Home/Home.storyboard
@@ -21,28 +21,36 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TVShowTableViewCell" rowHeight="64" id="jYz-9r-vrM" customClass="TVShowTableViewCell" customModule="TV_Shows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="64"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TVShowTableViewCell" rowHeight="115" id="jYz-9r-vrM" customClass="TVShowTableViewCell" customModule="TV_Shows" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="115"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jYz-9r-vrM" id="VnU-3C-sj3">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYW-V2-arB">
-                                                    <rect key="frame" x="16" y="16" width="382" height="32"/>
+                                                    <rect key="frame" x="108" y="46" width="41.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tgs-Yu-JYg">
+                                                    <rect key="frame" x="20" y="11" width="66" height="90"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="90" id="gXT-3n-xOa"/>
+                                                        <constraint firstAttribute="width" constant="66" id="uQX-ri-n6C"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="pYW-V2-arB" secondAttribute="trailing" constant="16" id="CEU-yW-aht"/>
-                                                <constraint firstItem="pYW-V2-arB" firstAttribute="leading" secondItem="VnU-3C-sj3" secondAttribute="leading" constant="16" id="KMw-yk-xz5"/>
-                                                <constraint firstAttribute="bottom" secondItem="pYW-V2-arB" secondAttribute="bottom" constant="16" id="Q0p-mr-VxW"/>
-                                                <constraint firstItem="pYW-V2-arB" firstAttribute="top" secondItem="VnU-3C-sj3" secondAttribute="top" constant="16" id="p7m-kA-FBn"/>
+                                                <constraint firstItem="pYW-V2-arB" firstAttribute="leading" secondItem="tgs-Yu-JYg" secondAttribute="trailing" constant="22" id="5Zc-CA-JJD"/>
+                                                <constraint firstItem="tgs-Yu-JYg" firstAttribute="top" secondItem="VnU-3C-sj3" secondAttribute="top" constant="11" id="Pez-Qh-3ZA"/>
+                                                <constraint firstItem="tgs-Yu-JYg" firstAttribute="leading" secondItem="VnU-3C-sj3" secondAttribute="leading" constant="20" id="mqp-JL-pZr"/>
+                                                <constraint firstItem="pYW-V2-arB" firstAttribute="top" secondItem="VnU-3C-sj3" secondAttribute="top" constant="46" id="nO5-Px-dyC"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="showImage" destination="tgs-Yu-JYg" id="SsZ-dw-rrF"/>
                                             <outlet property="showNameLabel" destination="pYW-V2-arB" id="tlE-Ch-xlK"/>
                                         </connections>
                                     </tableViewCell>
@@ -91,7 +99,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="650"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b5E-0g-XPF">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-show-placeholder-rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="b5E-0g-XPF">
                                                     <rect key="frame" x="40" y="31" width="334" height="310"/>
                                                     <color key="backgroundColor" red="0.20893492629999999" green="0.84296386690000003" blue="0.99968796969999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
@@ -147,6 +155,7 @@
                                             <outlet property="descriptionLabel" destination="lgB-0q-NeO" id="ID8-Zd-b00"/>
                                             <outlet property="numberOfReviewsLabel" destination="S0F-Fi-atv" id="bei-Nx-axJ"/>
                                             <outlet property="ratingView" destination="tPK-2F-hGv" id="P7e-G4-TdT"/>
+                                            <outlet property="showImage" destination="b5E-0g-XPF" id="CwO-32-8US"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewTableViewCell" rowHeight="150" id="ILC-o0-fGp" customClass="ReviewTableViewCell" customModule="TV_Shows" customModuleProvider="target">
@@ -354,6 +363,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic-show-placeholder-rectangle" width="350" height="350"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
