--- a/TV Shows/Modules/Home/Home.storyboard
+++ b/TV Shows/Modules/Home/Home.storyboard
@@ -165,9 +165,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LoP-ix-VpK">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-profile-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LoP-ix-VpK">
                                                     <rect key="frame" x="27" y="10" width="50" height="50"/>
-                                                    <color key="backgroundColor" red="0.20893492629999999" green="0.84296386690000003" blue="0.99968796969999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="7bn-6d-6NJ"/>
                                                         <constraint firstAttribute="height" constant="50" id="GLv-bg-KHs"/>
@@ -363,6 +363,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic-profile-placeholder" width="150" height="150"/>
         <image name="ic-show-placeholder-rectangle" width="350" height="350"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
